Attempt to fix flickering link animations

--- a/src/assets/css/_navigation.scss
+++ b/src/assets/css/_navigation.scss
@@ -3,7 +3,6 @@
     display: block;
     padding: 0.2em 0;
     color: $color__neutral--dark;
-    transition: 0.2s ease;
   }
   &__link:hover,
   &__item--current &__link {
